--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
-    "core-js": "^3.29.1"
+    "core-js": "^3.29.1",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
